--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>VERSUS</title>
 </head>
 <body>
@@ -48,23 +48,23 @@
     <div class="container">
       <h3 class="card-title-1 pt-5 mb-1">Latest Work</h3>
       <div class="row d-flex justify-content-center">
-        <div class="col-xl-4 col-lg-6 mt-4 col-sm-12"><img src="images/picture-1.jpg" class="card-img-top" alt="...">
+        <div class="col-xl-4 col-lg-6 mt-4 col-sm-12"><img src="./images/picture-1.jpg" class="card-img-top" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 mt-4 col-sm-12"><img src="images/picture-2.jpg" class="card-img-top" alt="...">
+        <div class="col-xl-4 col-lg-6 mt-4 col-sm-12"><img src="./images/picture-2.jpg" class="card-img-top" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 mt-4 col-sm-12"><img src="images/picture-3.jpg" class="card-img-top" alt="...">
+        <div class="col-xl-4 col-lg-6 mt-4 col-sm-12"><img src="./images/picture-3.jpg" class="card-img-top" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="images/picture-4.jpg" class="card-img-top mt-4" alt="...">
+        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="./images/picture-4.jpg" class="card-img-top mt-4" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="images/picture-5.jpg" class="card-img-top mt-4" alt="...">
+        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="./images/picture-5.jpg" class="card-img-top mt-4" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="images/picture-6.jpg" class="card-img-top mt-4" alt="...">
+        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="./images/picture-6.jpg" class="card-img-top mt-4" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="images/picture-7.jpg" class="card-img-top mt-4" alt="...">
+        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="./images/picture-7.jpg" class="card-img-top mt-4" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="images/picture-8.jpg" class="card-img-top mt-4" alt="...">
+        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="./images/picture-8.jpg" class="card-img-top mt-4" alt="...">
         </div>
-        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="images/picture-9.jpg" class="card-img-top mt-4" alt="...">
+        <div class="col-xl-4 col-lg-6 col-sm-12"><img src="./images/picture-9.jpg" class="card-img-top mt-4" alt="...">
         </div>
       </div>
     </div>
